fixed footer being not responsive, overall css improvement.

--- a/components/backButton/Backbutton.module.scss
+++ b/components/backButton/Backbutton.module.scss
@@ -6,34 +6,39 @@
 }
 
 .button {
-  font-size: 1.4rem;
-  color:black;
-  width: 120px;
-  padding: 5px 5px 5px 6px;
-  border: 3px solid gray;
-  border-radius: 15px;
-  background: inherit;
+  background-color: #433a1f;
   font-family: "Roboto Condensed";
-  font-weight: 500;
-  outline: none;
-  transition: 1.5s;
-  float: right;
-  &:hover {
-    transition: 1.5s;
-    border: 3px solid black;
+  cursor: pointer;
+  float:right;
+  text-decoration: none;
+  border: none;
+  border-radius: 10px;
+  height: 50px;
+  width: 10%;
+  font-size: 1rem;
+  color: white;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px 0px, rgba(0, 0, 0, 0.22) 0px 15px 12px 0px;
+  transition: 1.2s;
+
+&:hover{
+  transform: scale(110%);
+  transition: 1.2s;
+
+}
+  &:focus{
+    box-shadow: inset 20px 20px 20px rgba(0, 0, 0, 0.335) ;
+    transform: scale(110%);
+    transition: 1.2s;
   }
 }
 
-.backMinimalized{
 
-  font-size: 1.4rem;
+
+
+@media all and (max-width:830px){
+.button{
+  position:fixed;
   width: 100px;
-  background: inherit;
-  font-family: "Roboto Condensed";
-  font-weight: 500;
-  outline: none;
-  transition: 1.5s;
-  float: right;
-  visibility: hidden;
+}
 }
 
