--- a/pages/Both/both.module.scss
+++ b/pages/Both/both.module.scss
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap);
+
 .flexbox {
   display: flex;
 }
@@ -19,7 +21,7 @@
   z-index: 99; //set to be on top of every div no matter what.
   position: fixed;
   width: 60%;
-  left:20%;
+  left: 20%;
   top: 30%;
   border-radius: 20px;
   background-color: #7e6e3d;
@@ -28,8 +30,6 @@
   transition: 2s opacity ease-in-out;
   text-align: center;
   visibility: visible;
-
-
 }
 
 .finishBoxDsp {
@@ -39,8 +39,8 @@
   transition: 2s opacity ease-in-out;
 }
 
-.blurAppear{
-  z-index: 98; 
+.blurAppear {
+  z-index: 98;
   position: fixed;
   width: 100%;
   height: 100%;
@@ -49,11 +49,10 @@
   bottom: 0px;
   opacity: 1;
   transition: opacity 2s ease-in-out;
- backdrop-filter: blur(15px);
-
+  backdrop-filter: blur(15px);
 }
-.blurDsp{
-  z-index: 98; 
+.blurDsp {
+  z-index: 98;
   position: fixed;
   width: 100%;
   height: 100%;
@@ -62,55 +61,56 @@
   visibility: hidden;
   opacity: 0;
   transition: opacity 2s ease-in-out;
-  filter:blur(10px);
+  filter: blur(10px);
 }
 
 .button {
-  margin-top: 5rem;
-  width: 30%;
-  left: 35%;
-  position: absolute;
+  position: relative;
+  left: 33%;
+  background-color: #433a1f;
+  text-decoration: none;
+  border: none;
   border-radius: 10px;
-  border: 4px solid gray;
-  background-color: inherit;
+  height: 100px;
+  width: 33%;
+  font-family: "Roboto Condensed";
+  font-size: 1rem;
+  color: white;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px 0px,
+    rgba(0, 0, 0, 0.22) 0px 15px 12px 0px;
+  transition: 1.2s;
+
+  &:hover {
+    transform: scale(110%);
+    transition: 1.2s;
+  }
+  &:focus {
+    box-shadow: inset 20px 20px 20px rgba(0, 0, 0, 0.335);
+    transform: scale(110%);
+    transition: 1.2s;
+  }
+}
+.buttonFinish {
+  width: 40%;
+  position: relative;
+  top: 10%;
+  height: 20%;
+  border-radius: 5px;
+  border: none;
+  background-color: #695c36;
   color: black;
   text-decoration: none;
   text-align: center;
   font-weight: bold;
   font-size: large;
-  height: 6rem;
   cursor: pointer;
-  visibility: visible;
   animation: FadeInDelayed 1s;
+  transition: 2s;
   &:hover {
-    border: 4px solid black;
+    background-color: #433a1f;
     transition: 2s;
   }
 }
-
-.buttonFinish{
-    width: 40%;
-    position:relative;
-    top:10%;
-    height: 20%;
-    border-radius: 5px;
-    border:none;
-    background-color: #695c36;
-    color: black;
-    text-decoration: none;
-    text-align: center;
-    font-weight: bold;
-    font-size: large;
-    cursor: pointer;
-    animation: FadeInDelayed 1s;
-    transition: 2s;
-    &:hover {
-      background-color:#433a1f;
-      transition: 2s;
-    }
-
-}
-
 
 .buttonDsp {
   visibility: hidden;
@@ -126,23 +126,7 @@
   }
 }
 
-@media all and (max-width: 750px) {
-  .button {
-    width: 60%;
-    left: 18%;
-  }
-  .flexbox {
-    flex-direction: column;
-  }
 
-  .QuizFlexbox {
-    flex-grow: 4;
-  }
-
-  .menu {
-    flex: 1 0 30%;
-  }
-}
 
 .menu {
   font-size: 55px;
@@ -150,7 +134,7 @@
   height: 160px;
   text-align: center;
   text-decoration: none;
-  background-color: #7e6e3d;
+  background-color: #433a1f;
   color: white;
   font-weight: bold;
   width: 15%;
@@ -159,17 +143,15 @@
   margin-left: 3%;
 }
 
-.bottomText{
- 
-    font-size: 30px;
-    text-align: center;
-    text-decoration: none;
-    color: white;
-
+.bottomText {
+  font-size: 30px;
+  text-align: center;
+  text-decoration: none;
+  color: white;
 }
 
-.header{
-  color:purple;
+.header {
+  color: purple;
   font-size: 40px;
   font-weight: 900;
 }
@@ -206,6 +188,8 @@
 }
 .input {
   outline: none;
+  font-family: "Roboto Condensed";
+  font-weight: 900;
   width: 80%;
   height: 30%;
   border-radius: 5px;
@@ -225,6 +209,8 @@
 .inputCorrect {
   outline: none;
   width: 80%;
+  font-family: "Roboto Condensed";
+  font-weight: 900;
   height: 30%;
   border-radius: 5px;
   text-align: center;
@@ -239,6 +225,8 @@
 
 .inputWrong {
   outline: none;
+  font-family: "Roboto Condensed";
+  font-weight: 900;
   width: 80%;
   height: 30%;
   border-radius: 5px;
@@ -252,18 +240,41 @@
   color: #0000007f;
 }
 
-@media all and (max-width: 609px){
+@media all and (max-width: 770px) {
+  .bottomText {
+    font-size: 25px;
+  }
 
-.bottomText{
-  font-size: 25px;
+  .header {
+    font-size: 30px;
+  }
+
+
+  .menuCorrect{
+    flex: 1 0 30%;
+  }
+
+  .menuWrong{
+    flex:1 0 30%;
+  }
+
+  
+  .button {
+    width: 60%;
+    left: 18%;
+  }
+  .flexbox {
+    flex-direction: column;
+  }
+
+  .QuizFlexbox {
+    flex-grow: 4;
+  }
+
+  .menu {
+    flex: 1 0 30%;
+  }
 }
-
-.header{
-  font-size:30px;
-}
-
-}
-
 
 @keyframes shake {
   10%,
