--- a/pages/kana/kana.module.scss
+++ b/pages/kana/kana.module.scss
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap);
+
 .flexbox {
   display: flex;
   gap: 5%;
@@ -25,6 +27,7 @@
   border-radius: 10px;
   height: 250px;
   width: 15%;
+  font-family: "Roboto Condensed";
   font-size: 1rem;
   color: white;
   box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px 0px, rgba(0, 0, 0, 0.22) 0px 15px 12px 0px;
